[gd_scene load_steps=11 format=2]

[ext_resource path="res://utils/TargetPlane.tscn" type="PackedScene" id=1]
[ext_resource path="res://players/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/tiles/TutorialRoom/TutorialRoom.tscn" type="PackedScene" id=3]
[ext_resource path="res://utils/Camera/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/TutorialLevel/TutorialLevel.gd" type="Script" id=5]
[ext_resource path="res://logic/CameraLockTrigger/CameraTarget.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemies/PosessedSwordsman/PosessedSwordsman.tscn" type="PackedScene" id=7]
[ext_resource path="res://pickups/BlunderbussPickup/PickupBlunderbus.tscn" type="PackedScene" id=8]
[ext_resource path="res://common/assets/sounds/spooky drone.ogg" type="AudioStream" id=9]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.223529, 0.137255, 0.137255, 1 )

[node name="TutorialLevel" type="Spatial"]
script = ExtResource( 5 )

[node name="TargetPlane" parent="." instance=ExtResource( 1 )]

[node name="Camera" parent="." instance=ExtResource( 4 )]
environment = SubResource( 1 )
current = true

[node name="MapCamera" type="Camera" parent="."]
transform = Transform( -1.62921e-07, -1, -1.62921e-07, 0, -1.62921e-07, 1, -1, 1.62921e-07, 2.65431e-14, 0, 78.747, 0 )

[node name="TutorialRoom" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="TutorialRoom" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.511346, 0.571215, 1.03963 )

[node name="CameraTarget" parent="TutorialRoom" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.85382, -0.428785, -0.618578 )

[node name="PosessedSwordsman" parent="TutorialRoom" instance=ExtResource( 7 )]
transform = Transform( -1.2, 0, -1.04907e-07, 0, 1, 0, 1.04907e-07, 0, -1.2, -0.386159, 1, -4.77504 )

[node name="BlunderbusPickup" parent="TutorialRoom" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.953, 1, -0.903698 )

[node name="BlunderbusPickup2" parent="TutorialRoom" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.41914, 1, -0.903698 )

[node name="TutorialTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MinTimeTextOnScreenTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 14.054
pitch_scale = 0.5
autoplay = true
